fixed images alignment issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,5 +47,8 @@ nav{
 }
 
 .middle {
-margin: auto;
+float:none;
+padding: 20px
+margin-bottom: 10px;
+border: 1px solid black;
 }
